gitops/gotify/gotify-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  labels:
    app.kubernetes.io/name: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gotify
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotify
    spec:
      containers:
      - name: gotify
        image: ghcr.io/gotify/server
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /data
        # - name: configs
        #   mountPath: /etc/gotify/
        livenessProbe:
          tcpSocket:
            port: 80
        readinessProbe:
          tcpSocket:
            port: 80
        resources:
          requests:
            cpu: 5m
            memory: 300Mi
          limits: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      volumes:
      - name: data
        emptyDir: {}
      # - name: configs
      #   configMap:
      #     name: app-config

---
kind: Service
apiVersion: v1
metadata:
  name: gotify
spec:
  selector:
    app.kubernetes.io/name: gotify
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
spec:
  rules:
  - host: push.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotify
            port:
              name: http
  - host: push.10.0.0.21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotify
            port:
              name: http

  - host: push.cloud.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotify
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spdf
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gotify
  policyTypes:
    - Ingress
    - Egress
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - protocol: TCP
      port: 8080
