gitops/gotify/ntfy-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
      - name: ntfy
        image: binwiederhier/ntfy
        args: ["serve"]
        resources:
          requests:
            cpu: 5m
            memory: 64Mi
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: "/etc/ntfy"
          readOnly: true
        livenessProbe:
          tcpSocket:
            port: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      volumes:
        - name: config
          configMap:
            name: ntfy
---
# Basic service for port 80
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app: ntfy
  ports:
  - port: 8080
    targetPort: 8090


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
spec:
  rules:
  - host: push.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntfy
            port:
              name: http
  - host: push.10.0.0.21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntfy
            port:
              name: http

  - host: push.cloud.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntfy
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ntfy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  policyTypes:
    - Ingress
    - Egress
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - protocol: TCP
      port: 8080
